--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,38 @@
 footer {
-    background-color: #0d2844; /* Dark background for footer */
-    color: #fff; /* White text color */
+    position: relative;
+    color: #181212; 
+    height: fit-content;
+    padding-bottom: 40px;
+    
 }
+
+footer::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: url("../img/teamfooter.png") no-repeat center/cover;
+    z-index: -2;
+    opacity: 0.4;
+}
+
+footer::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #0d2844;
+    z-index: -1;
+    opacity: 0.6;
+}
+footer a{
+    color: white !important;
+}
+
 @media screen and (max-width:786px){
     .bottomfooter{
         flex-direction: column;
