--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body{
 .back-to-top {
     position: fixed;
     display: none;
-    right: 45px;
+    right: 30px;
     bottom: 45px;
     z-index: 99;
 }
@@ -52,6 +52,10 @@ body{
     text-align: justify;
 }
 
+.what-hack p{
+ font-size: clamp(14px,5vw,20px);
+ line-height: 2;
+}
 
 #pointer {
     content: '';
@@ -547,7 +551,6 @@ h6,
 
 
 /* new*/
-
 .slider-container {
     position: relative;
     width: 100%;
@@ -559,33 +562,46 @@ h6,
     width: 100%;
     overflow: hidden;
     scroll-behavior: smooth;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .slider-item {
     flex: 0 0 auto;
-    width: 500px;
+    width: 380px;
     height: 400px;
     background: rgb(255, 255, 255);
-    padding: 30px;
     margin-right: 30px;
     text-align: center;
     border: 1.2px solid rgb(228, 4, 4);
     border-radius: 9px;
     box-shadow: rgba(255, 255, 255, 0.44) -6.44px -7.25px 11.27px, rgba(0, 0, 0, 0.07) 7.25px 6.44px 24.96px;
     box-sizing: border-box;
+   transition: 0.5s;
+  
 }
 
+.slider-item-content{
+    padding: 30px;
+}
 .slider-item img {
-   width: 130px;
-   height: 130px;
-   border-radius: 50%;
+    width: 130px;
+    height: 130px;
+    border-radius: 50%;
     margin-bottom: 15px;
     object-fit: cover;
-    
-}
-.img-item{
-    width: 130px !important;
 
+}
+.slider-item-img{
+    transition: 0.7s;
+    background:#a87bae;
+border-radius: 0px 0px 0px 0px;
+    padding: 10px;
+    border-bottom: 1px solid #333;
+}
+
+.img-item {
+    width: 130px !important;
 }
 
 .slider-btn {
@@ -606,11 +622,39 @@ h6,
 }
 
 .left-btn {
-    left: 10px;
+    left: 40px;
 }
 
 .right-btn {
-    right: 10px;
+    right: 40px;
+}
+
+@media screen and (max-width:980px) {
+    .slider{
+        max-width: 380px;
+    }
+    .slider-item {
+        width: 380px;
+    }
+    .left-btn {
+        left: 10px;
+    }
+    
+    .right-btn {
+        right: 10px;
+    }
+    .back-to-top{
+        right: 0px;
+        bottom: 15px;
+
+    }
+    .what-hack p{
+        font-size: 15px;
+        line-height: 1.5;
+        
+    }
+    
+
 }
 
 
