--- a/css/nav.css
+++ b/css/nav.css
@@ -107,6 +107,7 @@ body {
 
 }
 
+
 @keyframes loaderAnim {
 	to {
 		opacity: 1;
@@ -230,7 +231,8 @@ height: 120px;
 }
 
 a.frame__demos-item {
-	font-weight: bolder
+	font-weight: bolder;
+	text-decoration: none !important;
 }
 .frame__demos-item {
 	font-size: clamp(12px, 2.5vw, 17px);
@@ -364,6 +366,6 @@ a.frame__demos-item {
 	  }
 	  .nav-icon{
 		  display: block;
-		  z-index: 9999;
+		  z-index: 999;
 	  }
   }
