--- a/css/ps.css
+++ b/css/ps.css
@@ -182,7 +182,7 @@ tbody tr:hover {
 
 .table-filter {
     display: flex;
-    justify-content: flex-end;
+    justify-content:space-between;
     align-items: center;
     margin-bottom: 10px;
     padding-right: 30px; /* Align with table container padding */
