--- a/css/base.css
+++ b/css/base.css
@@ -7,17 +7,30 @@
 	padding: 0 var(--page-padding);
 	display: flex;
 	flex-direction: column;
-	width: 100vw;
-	min-height: 100vh;
+height: 100vh;
+
 	position: relative;
 	justify-content: center;
 	align-items: start;
 	font-family: "greycliff-cf", sans-serif;
 	font-weight: 300;		
 }
+.inner-content{
+	position: absolute;
+	left: 0%;
+	display: flex;
+	flex-direction: column;
+	width: 100%;
 
+}
+.tag-line{
+	display: flex;
+	justify-content: center;
+	bottom: 10px;
+	position: absolute;
+}
 .content h2 {
-	font-size: 20vw;
+	font-size: 14vw;
 	line-height: 1;
 	margin: 0;
 	pointer-events: none;
@@ -116,3 +129,10 @@ main:hover ~ .cursor{
 }
 
 /* 3d content */
+@media  screen and (max-width:768px) {
+	.tag-line{
+		bottom: 50px;
+		left: 50px;
+	}
+	
+}
