--- a/dashboard/pssubmisson.css
+++ b/dashboard/pssubmisson.css
@@ -7,6 +7,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
     margin: 20px auto; 
+    font-family: "source-code-pro", monospace !important;
     
   }
 
@@ -161,7 +162,7 @@
     box-sizing: border-box;
     color: #FFFFFF;
     display: flex;
-    font-family: Phantomsans, sans-serif;
+    font-family: "source-code-pro", monospace !important;
     font-size: 16px; 
     justify-content: center;
     line-height: 1em;
